# ddns-headscale

./: .gitignore  README.md  config.yml.example  domains.json.example  main.py  pyproject.toml
